--- a/EstructuraStyle.css
+++ b/EstructuraStyle.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url('/RealPagHOME/imagenes/fondoDeMiGGG.jpg');
+	background-image: url('https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/fondoDeMiGGG.jpg?raw=true');
 	background-blend-mode: lighten;
 	background-color: rgba(236,206,160,0.7);
 	font-size: 120%;
@@ -7,7 +7,7 @@ body{
 
 nav{
 	position: fixed;
-	background-image: url('/RealPagHOME/imagenes/cuadromenureal.jpg');
+	background-image: url('https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/cuadromenureal.jpg?raw=true');
 	background-size: cover;
 	background-repeat: no-repeat;
 	margin-left: 86%;
@@ -49,7 +49,7 @@ nav:hover .contenidohome {display: block;
 
 
 header{
-    	background-image: url('/RealPagHOME/imagenes/gifoarquitectonico.gif');
+    	background-image: url('https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/gifoarquitectonico.gif?raw=true');
     	background-size: cover;
     	background-repeat: no-repeat;
     	background-position: center;
